created a context for the plateform

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,22 @@ body {
   h1 {
     text-align: center;
   }
+  .search {
+    margin: auto;
+    width: 42%;
+    padding-bottom: 10px;
+    input {
+      margin-right: 10px;
+    }
+  }
+}
+.mainChange {
+  background-color: black;
+  color: white;
+  input {
+    background-color: black;
+    color: white;
+  }
 }
 table {
   border-collapse: collapse;
