--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,19 @@ table {
     background-color: #dddddd;
   }
 }
+.main-todo {
+  background-color: rgb(240, 240, 240);
+  width: 40%;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: auto;
+  input {
+    margin-left: 10px;
+  }
+  &__todos {
+    width: 50%;
+    margin: auto;
+    text-align: left;
+  }
+}
